# ai-assistant-tobee

./: .cursorrules  .gitignore  CLAUDE.md  FRONTEND_PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_FINAL_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_EVALUATION_SUMMARY.md  README.md  ai-assistant.code-workspace  create_test_pdf.py  debug_test.txt  different_test.txt  docker-compose.host-ollama.yml  git_workflow.sh  install_dependencies.sh  isolation_test.txt  manage_envs.sh  mcp-config-local.json  ml_comprehensive_guide.txt  ml_guide.txt  python_best_practices.txt  simple_test.txt  start.sh  test_advanced_rag.py  test_advanced_rag_frontend.py  test_auto_response.txt  test_beginning_upload.txt  test_conversation_fix.txt  test_conversation_id_fix.txt  test_delete_frontend.html  test_document_context.py  test_final_ui.py  test_frontend_reasoning.py  test_frontend_streaming.py  test_mcp_integration.py  test_new_ui.py  test_pdf_summary.py  test_phase2_streaming.py  test_phase2_ui.py  test_reasoning_chat.py  (+6 more)
backend/: .dockerignore  CLEANUP_README.md  Dockerfile  MIGRATIONS.md  Makefile  README.md  __init__.py  activate_venv.sh  alembic.ini  cleanup_conversations.py  debug_agent_results.py  debug_agents.py  debug_agents_simple.py  debug_api_manager.py  debug_manager_flow.py  debug_simple.py  delete_user.py  demo_phase4_multi_agent.py  fix_phase4_issues.py  invoke_lambda.py  lambda_handler.py  localai_community.db  mcp-config-local.json  migrate_db.py  pyproject.toml  requirements-advanced.txt  requirements-simple.txt  requirements-updated.txt  requirements.txt  start_server.sh  test_chat.py  (+17 more)
(+277 files in other folders)
