[project]
name = "backend"
version = "0.1.0"
description = "AI Assistant Backend - FastAPI server with RAG capabilities"
requires-python = ">=3.10"
dependencies = [
    # Core web framework
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    # HTTP client for Ollama API
    "httpx>=0.28.0",
    # RAG and AI
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    # Document processing
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "pdfminer.six==20221105",
    "pdfplumber>=0.9.0",
    "unstructured[pdf,docx]>=0.11.0",
    # Additional utilities
    "python-multipart>=0.0.6",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
    # Mathematical reasoning dependencies
    "sympy>=1.14.0",
    "numpy>=1.24.0",
    # MCP (Model Context Protocol)
    "mcp==1.0.0",
    "mangum",
    "langchain_experimental>=0.3.0",
    # Advanced RAG Dependencies
    "scikit-learn>=1.3.0",
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "textblob>=0.17.0",
    "networkx>=3.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.28.0",
]
